@@ -333,6 +333,7 @@ class Usecode_internal : public Usecode_machine
 	USECODE_INTRINSIC_DECL(set_new_schedules);
 	USECODE_INTRINSIC_DECL(revert_schedule);
 	USECODE_INTRINSIC_DECL(run_schedule);
+	USECODE_INTRINSIC_DECL(modify_schedule);
 	USECODE_INTRINSIC_DECL(get_temperature);
 	USECODE_INTRINSIC_DECL(set_temperature);
 //	USECODE_INTRINSIC_DECL(add_removed_npc);
