@@ -1,3 +1,7 @@
+2003-08-14  Ryan Nunn  <colourles@users.sourceforge.net>
+	* usecode/intrinsics.cc, usecode/siintrinsics.h, usecode/ucinternal.h :
+	  B5 Intrinsic in SI (modify_schedule)
+
 2003-0813	Darke	<darkepaw@users.sf.net>
 	* usecode/ucxt/head2data.cc: Updated to append function number
 	  to the end of UNKNOWN functions.
